# vcam

./: CMakeLists.txt  nodelet_plugins.xml  package.xml
cfg/: vcam.cfg
include/vcam/: device.h  logging_macros.hpp  v4l2_cam_driver.h  vcam_nodelet.hpp  vcam_nodelet.hpp2
launch/: vcam_mavros_trigger.launch  vcam_node.launch  vcam_nodelet_launch.launch
msg/: Exposure.msg
set_trigger/: readme.txt  run.py  set_mode  set_mode.c  set_trigger  set_trigger.c
src/: TriggerSwitch.cpp  device.cpp  trigger_ready.cpp  v4l2_cam_driver.cpp  vcam_node.cpp  vcam_nodelet.cpp  vcam_nodelet.cpp2
